--- a/chat.html
+++ b/chat.html
@@ -16,7 +16,7 @@
     </head>
 
     <body onload="onLoad()">
-        <h1>Chat <img src="chat.gif" /></h1>
+        <h1>Chat</h1>
 
 	<h2>Login Users</h2>
 	<p id="login_users"></p>
