--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </head>
 
     <body>
-        <h1>Chat Entrance <img src="chat.gif" /></h1>
+        <h1>Chat Entrance</h1>
 
         <p>
         <a href="chat.html">ENTER</a>
