--- a/chat.html
+++ b/chat.html
@@ -24,6 +24,7 @@
 	<form id="login_form" onSubmit="onLogin(); return false;">
             <span class="caption">Enter username to login:</span>
             <input id="login_username" type="text" size="10" value="" />
+            <input id="login_room" type="text" size="10" value="" />
             <input id="login_button" type="button" value="Login" />
         </form>
 
